# QuQfin

./: .gitignore  README.md  paper.md  pyproject.toml  requirements.txt
.github/: publish-pypi.yml
examples/: algo_trading_example.py  basic_usage.py  fixed_income_example.py  options_example.py  portfolio_example.py  timeseries_example.py
src/quqfin/: __init__.py
src/quqfin/core/: options.py
src/quqfin/core/algo_trading/: strategies.py
src/quqfin/core/fixed_income/: bonds.py
src/quqfin/core/market_making/: orderbook.py
src/quqfin/core/options/: black_scholes.py  monte_carlo.py
src/quqfin/core/portfolio/: optimization.py
src/quqfin/core/risk/: var.py
src/quqfin/core/timeseries/: models.py
tests/: test_algo_trading.py  test_fixed_income.py  test_market_making.py  test_options.py  test_portfolio.py  test_risk.py  test_timeseries.py
