[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quqfin"
version = "0.1.0"
description = "A quantum-accelerated quantitative finance library"
authors = [{name = "Shiwen An", email = "sweynan@icloud.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "cupy>=11.0.0",
    "cuquantum-python>=22.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/quqfin"
Documentation = "https://quqfin.readthedocs.io"